Deployments/YAMLs/DEV/Ingress/aro-workshop-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aro-workshop-ingress
  namespace: aro-workshop-dev
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:
  rules:    
  - http:
      paths:
      - path: /nginx/?(.*)
        backend:
          serviceName: nginx-unprivileged
          servicePort: 8080
      - path: /?(.*)
        backend:
          serviceName: ratingswebaro
          servicePort: 80
    host: aro-dev.wkshpdev.internal.com
